--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,12 @@
         color: #000;
     }
 
+/* Headings */
+
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Montserrat', sans-serif;
+    }
+
 /* Icons */
 
 	.icon {
@@ -91,13 +97,11 @@
     }
 
     .jumbotron > h1 {
-        font-family: 'Montserrat', sans-serif;
         color: #000;
         font-size: 3em;
     }
 
     .jumbotron > h3 {
-        font-family: 'Montserrat', 'sans-serif';
         color: #000;
         font-size: 1.6em;
     }
@@ -119,9 +123,8 @@
         padding-top: 1.5em;
     }
 
-/* Tiny Mobile Screens */
-/* TODO set all panels to same percentage at each size */
-    @media screen and (max-width: 710px) {
+/* Change size for small screens */
+    @media screen and (max-width: 720px) {
         .jumbotron {
             width: 90% !important;
         }
