--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@
 
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 @import url("http://fonts.googleapis.com/css?family=Montserrat:300,400,300italic,400italic");
-@import url("font-awesome.min.css");
 
 /* Body */
 
@@ -48,7 +47,6 @@
 			/*-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;*/
 			font-family: FontAwesome;
-            /*color: #444;*/
 			/*font-style: normal;
 			font-weight: normal;
 			text-transform: none;*/
@@ -61,12 +59,12 @@
 /* Navbar */
 
     /* Navbar Icons Default Color */ 
-    .navbar-nav .icon:before {
-            color: #444;
+    .navbar-nav > li > a > .icon:before {
+        color: #444;
     }
 
     /* Navbar Icons Hover Color */
-    .navbar-default .navbar-nav > li > a:hover > .icon:before, .navbar-default .navbar-nav > li > a:focus > .icon:before, .navbar-default .navbar-nav > li > a:active > .icon:before {
+    .navbar-nav > li > a:hover > .icon:before, .navbar-default .navbar-nav > li > a:focus > .icon:before, .navbar-default .navbar-nav > li > a:active > .icon:before {
         color: #000;
     }
 
